--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ node_js:
 - iojs
 - '0.12'
 - '0.10'
+matrix:
+  allow_failures:
+    - node_js: iojs
 before_install:
 - npm install -g gulp
 after_success: npm run-script coveralls
