refactor(es2015) convert to ES2015
Use Babel to compile app/ to generator/app. Use Babel for Gulpfile, too.

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,10 @@
 {
+  "ecmaFeatures": {
+    "modules": true
+  },
   "env": {
-    "node": true
+    "node": true,
+    "es6": true
   },
   "rules": {
     "block-scoped-var": [2, true],
