--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "yosay": "^1.0.4"
   },
   "devDependencies": {
+    "babel": "^5.5.6",
     "coveralls": "^2.11.2",
+    "del": "^1.2.0",
     "eslint-path-formatter": "^0.1.1",
-    "gulp": "^3.8.11",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^5.1.0",
     "gulp-eslint": "^0.12.0",
     "gulp-istanbul": "^0.9.0",
     "gulp-jscs": "^1.6.0",
