--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,27 @@
 {
   "ecmaFeatures": {
-    "modules": true
+    "arrowFunctions": true,
+    "binaryLiterals": false,
+    "blockBindings": true,
+    "classes": true,
+    "defaultParams": true,
+    "destructuring": true,
+    "forOf": true,
+    "generators": true,
+    "globalReturn": false,
+    "modules": true,
+    "objectLiteralComputedProperties": true,
+    "objectLiteralDuplicateProperties": false,
+    "objectLiteralShorthandMethods": true,
+    "objectLiteralShorthandProperties": true,
+    "octalLiterals": false,
+    "regexUFlag": true,
+    "regexYFlrag": true,
+    "restParams": true,
+    "spread": true,
+    "superInFunctions": true,
+    "templateString": true,
+    "unicodeCodePointEscape": true
   },
   "env": {
     "node": true,
