--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "generator-ds-mod",
   "version": "1.1.1",
   "description": "Yeoman Generator for creating Node modules",
-  "main": "generator/app/index.js",
+  "main": "app/index.js",
   "scripts": {
     "prepublish": "npm test",
     "test": "gulp test",
