--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "yosay": "^1.0.4"
   },
   "devDependencies": {
-    "babel": "^5.5.6",
+    "babel-core": "^5.6.15",
     "coveralls": "^2.11.2",
     "del": "^1.2.0",
     "eslint-path-formatter": "^0.1.1",
