--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel": "^5.6.12",
     "coveralls": "^2.11.2",
     "del": "^1.2.0",
+    "eslint-config-dustinspecker": "^0.1.0",
     "eslint-path-formatter": "^0.1.1",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
