--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "del": "^1.2.0",
     "eslint-config-dustinspecker": "^0.1.0",
     "eslint-path-formatter": "^0.1.1",
+    "eslint-plugin-no-use-extend-native": "^0.1.4",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
     "gulp-eslint": "^1.0.0",
