feat(app): ask for user's email
Closes #3

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "module"
   ],
   "author": {
-    "name": "Dustin Specker"
+    "name": "Dustin Specker",
+    "email": "DustinSpecker@DustinSpecker.com"
   },
   "license": "MIT",
   "files": [
