feat(app): ask for user's URL
Closes #4

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   ],
   "author": {
     "name": "Dustin Specker",
-    "email": "DustinSpecker@DustinSpecker.com"
+    "email": "DustinSpecker@DustinSpecker.com",
+    "url": "https://github.com/dustinspecker"
   },
   "license": "MIT",
   "files": [
