--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "yosay": "^1.0.4"
   },
   "devDependencies": {
-    "babel": "^5.6.12",
+    "babel-core": "^5.8.23",
     "coveralls": "^2.11.2",
     "del": "^1.2.0",
     "eslint-config-dustinspecker": "^0.1.0",
