--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "gulp-alex": "^1.0.0",
     "gulp-babel": "^5.1.0",
     "gulp-eslint": "^1.0.0",
+    "gulp-if": "^2.0.0",
     "gulp-istanbul": "^0.10.0",
     "gulp-jscs": "^3.0.0",
     "gulp-jshint": "^1.11.0",
     "gulp-mocha": "^2.1.0",
+    "gulp-plumber": "^1.0.1",
     "sinon": "^1.14.1"
   }
 }
