--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "yosay": "^1.0.4"
   },
   "devDependencies": {
-    "babel-core": "^5.8.23",
+    "babel-core": "^6.0.12",
+    "babel-eslint": "^4.1.3",
+    "babel-preset-es2015": "^6.0.12",
     "coveralls": "^2.11.2",
     "del": "^2.0.0",
     "eslint-config-dustinspecker": "^0.1.0",
@@ -36,7 +38,7 @@
     "eslint-plugin-no-use-extend-native": "^0.1.4",
     "gulp": "^3.9.0",
     "gulp-alex": "^1.0.0",
-    "gulp-babel": "^5.1.0",
+    "gulp-babel": "^6.0.0",
     "gulp-eslint": "^1.0.0",
     "gulp-if": "^2.0.0",
     "gulp-istanbul": "^0.10.0",
