--- a/package.json
+++ b/package.json
@@ -33,18 +33,17 @@
   },
   "devDependencies": {
     "babel-core": "^6.0.12",
-    "babel-eslint": "^5.0.0",
+    "babel-eslint": "^6.0.0-beta.6",
     "babel-preset-es2015": "^6.0.12",
     "coveralls": "^2.11.2",
     "del": "^2.0.0",
-    "eslint-config-dustinspecker": "^0.3.1",
-    "eslint-path-formatter": "^0.1.1",
+    "eslint-config-dustinspecker": "^0.4.1",
     "eslint-plugin-new-with-error": "^1.1.0",
     "eslint-plugin-no-use-extend-native": "^0.3.1",
     "gulp": "^3.9.0",
     "gulp-alex": "^3.0.0",
     "gulp-babel": "^6.0.0",
-    "gulp-eslint": "^1.0.0",
+    "gulp-eslint": "^2.0.0",
     "gulp-if": "^2.0.0",
     "gulp-istanbul": "^0.10.0",
     "gulp-mocha": "^2.1.0",
