--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,4 @@ node_js:
   - '0.10'
 after_success: npm run-script coveralls
 notifications:
-  slack:
-    on_success: change
-    on_failure: always
-    rooms:
-      secure: HFzTuz67kFewMd1bZM1RxMWji+CGKf9qpGFj2k0DtDieCSuAG48gYr+ccxNvG8qalLAKrqb4Q0TX9MZbwREDqfbin5shFjtV9WBsL1issuSmo6vwqy63Fxz+7mzI16TpTLvxoxGOtwUi2OKLNAjmtdXsyxaQl6LOxRFtf3cFiWM=
+  email: false
