--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "generator-ds-mod",
-  "version": "3.2.1",
+  "version": "0.0.0-semantic-release",
   "description": "Yeoman Generator for creating Node modules",
   "main": "app/index.js",
   "scripts": {
     "test": "gulp test",
-    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
-  "repository": "dustinspecker/generator-ds-mod",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dustinspecker/generator-ds-mod.git"
+  },
   "keywords": [
     "yeoman-generator",
     "node",
@@ -50,6 +54,7 @@
     "gulp-plumber": "^1.0.1",
     "sinon": "^1.14.1",
     "yeoman-assert": "^2.1.1",
-    "yeoman-test": "^1.0.0"
+    "yeoman-test": "^1.0.0",
+    "semantic-release": "^4.3.5"
   }
 }
