chore(pkg): alphabetize devDeps

--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
     "gulp-istanbul": "^0.10.0",
     "gulp-mocha": "^2.1.0",
     "gulp-plumber": "^1.0.1",
+    "semantic-release": "^4.3.5",
     "sinon": "^1.14.1",
     "yeoman-assert": "^2.1.1",
-    "yeoman-test": "^1.0.0",
-    "semantic-release": "^4.3.5"
+    "yeoman-test": "^1.0.0"
   }
 }
