--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-eslint": "^6.0.0",
     "babel-preset-es2015": "^6.0.12",
     "coveralls": "^2.11.2",
+    "cz-conventional-changelog": "^1.1.5",
     "del": "^2.0.0",
     "eslint-config-dustinspecker": "^0.4.1",
     "eslint-plugin-new-with-error": "^1.1.0",
@@ -56,5 +57,10 @@
     "sinon": "^1.14.1",
     "yeoman-assert": "^2.1.1",
     "yeoman-test": "^1.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
